# cadenza

./: .gitignore  CLAUDE.md  LICENSE  README.md  STYLE.md  dev.py  project.yml
Cadenza/: Cadenza.entitlements  CadenzaApp.swift  ContentView.swift
Cadenza.xcodeproj/: project.pbxproj
Cadenza/Mocks/: MockAPIClientImpl.swift  MockAuthService.swift
Cadenza/Models/: AuthModels.swift  Exercise.swift  ExerciseSession.swift  Message.swift  Piece.swift  PracticeSession.swift  Routine.swift  RoutineAssignment.swift  User.swift  VideoSubmission.swift
CadenzaUITests/: CadenzaSmokeTests.swift  HomeUITests.swift  PageObjects.swift  PieceManagementUITests.swift  ScreenshotPipelineTests.swift  TeacherStudentUITests.swift
scratch/: questions.md  score-crop-margins.md  score-half-page-turns.md  score-performance-mode.md  score-review.md  score-tap-zones.md  score.md  security-remove-dev-backdoors.md  security-review.md  security.md  upandrun-review.md  upandrun.md  video-messages.md  video-practice-submissions.md  video-review.md  video-teacher-response.md  video.md
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed_dev_users.py  seed_scenario.py
server/app/: apple_auth.py  auth.py  config.py  database.py  main.py  middleware.py  models.py  s3.py  schemas.py
server/tests/: conftest.py  test_auth.py  test_dev_auth.py  test_pieces.py  test_practice_sessions.py  test_rate_limit_and_cors.py  test_routine_assignment.py  test_routines.py  test_teacher_student.py  test_video_messages.py  test_video_submissions.py
(+65 files in other folders)
